--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "lodash": "~2.4.1",
+    "lodash": "^3.3.0",
     "minimist": "^1.1.0"
   }
 }
